// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: View renders with custom background color #AAA 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#000",
        "opacity": 1,
      },
    ]
  }
>
  <Text>
    View
  </Text>
</View>
`;

exports[`components: View renders with custom styles {padding: 12} 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#000",
        "opacity": 1,
      },
      {
        "padding": 12,
      },
    ]
  }
>
  <Text>
    View
  </Text>
</View>
`;

exports[`components: View renders with dark theme 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#000",
        "opacity": 1,
      },
    ]
  }
>
  <Text>
    View
  </Text>
</View>
`;

exports[`components: View renders with default (light theme) 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fdfdfe",
        "opacity": 1,
      },
    ]
  }
>
  <Text>
    View
  </Text>
</View>
`;
